update content and data

--- a/data/cities/antony/boulangerie-saint-saturnin.yml
+++ b/data/cities/antony/boulangerie-saint-saturnin.yml
@@ -7,5 +7,5 @@ city: Antony
 street: "Rue de l'Église"
 housenumber: 10
 phone: "+33 1 46 66 08 35"
-opening_hours: "Mo-Fr 06:00-20:00; Sa-Su 07:00-20:00"
+opening_hours: "Mo-Fr 06:00-20:00; Sa 07:00-20:00; Th Closed; Su 07:00-14:00;"
 website: ""
