--- a/data/cities/franconville-la-garenne/la-boite-a-cycle.yml
+++ b/data/cities/franconville-la-garenne/la-boite-a-cycle.yml
@@ -8,4 +8,4 @@ street: "Boulevard Maurice Berteaux"
 housenumber: 5
 phone: "+33 9 72 54 36 27"
 opening_hours: "Tu-Fr 10:00-13:00,15:00-19:00; Sa 10:00-19:00"
-website: "https://franconville.ecolocomotion.com/"
+website: "https://www.laboiteacycle.fr"
