--- a/data/cities/montreuil/g20.yml
+++ b/data/cities/montreuil/g20.yml
@@ -1,11 +1,11 @@
-id: 3283055952
+id: 3332245885
 type: node
-latitude: 48.85517
-longitude: 2.43931
+latitude: 48.85875
+longitude: 2.43567
 postcode: "93100"
 city: Montreuil
-street: "Avenue du Président Wilson"
-housenumber: 134
+street: "Avenue de la Résistance"
+housenumber: 5
 phone: ""
-opening_hours: "Mo-Su 08:30-22:00"
+opening_hours: ""
 website: ""
