--- a/data/cities/paris/eric-kayser-rue-danielle-casanova.yml
+++ b/data/cities/paris/eric-kayser-rue-danielle-casanova.yml
@@ -6,6 +6,6 @@ postcode: "75001"
 city: Paris
 street: "Rue Danielle Casanova"
 housenumber: 33
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+33 1 42 97 59 29"
+opening_hours: "Mo-Th,Sa 07:00-20:30; Fr 07:00-15:00"
+website: "https://maison-kayser.com/boulangerie/vendome/"
