--- a/data/cities/versailles/comtesse-de-provence.yml
+++ b/data/cities/versailles/comtesse-de-provence.yml
@@ -6,6 +6,6 @@ postcode: "78000"
 city: Versailles
 street: "Rue Hoche"
 housenumber: 12
-phone: ""
-opening_hours: "Tu-Sa 09:30-19:30, Su 09:30-13:30"
-website: ""
+phone: "+33 1 30 24 58 01"
+opening_hours: ""
+website: "https://www.comtessedeprovence.com/"
