--- a/data/cities/versailles/harcour.yml
+++ b/data/cities/versailles/harcour.yml
@@ -6,6 +6,6 @@ postcode: "78000"
 city: Versailles
 street: "Rue de la Paroisse"
 housenumber: 58
-phone: ""
+phone: "+33 1 30 21 85 80"
 opening_hours: ""
-website: "https://fr.maje.com/"
+website: "gttps://www.harcour.fr"
