--- a/data/cities/fontainebleau/la-bellifontaine.yml
+++ b/data/cities/fontainebleau/la-bellifontaine.yml
@@ -7,5 +7,5 @@ city: Fontainebleau
 street: "Rue des Pins"
 housenumber: 9
 phone: "+33 1 64 22 32 46"
-opening_hours: ""
+opening_hours: "Th-Tu 07:00-19:30"
 website: ""
