--- a/data/cities/garches/alain-afflelou.yml
+++ b/data/cities/garches/alain-afflelou.yml
@@ -7,5 +7,5 @@ city: Garches
 street: "Avenue du Maréchal Leclerc"
 housenumber: 7
 phone: ""
-opening_hours: "Tu-Fr 09:00-12:30,14:30-19:30; Sa 09:00-13:00,14:30-19:30; PH closed"
+opening_hours: "Tu-Sa 09:00-12:30,14:00-19:00; PH off"
 website: ""
