--- a/data/cities/pantin/boulanger-patissier-traiteur.yml
+++ b/data/cities/pantin/boulanger-patissier-traiteur.yml
@@ -7,5 +7,5 @@ city: Pantin
 street: "Rue Gabrielle Josserand"
 housenumber: 14
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 06:00-21:00"
 website: ""
