update content and data

--- a/data/cities/versailles/comptoir-des-retouches.yml
+++ b/data/cities/versailles/comptoir-des-retouches.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 16
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Su 09:30-13:00,14:00-18:00"
 website: ""
