--- a/data/cities/chatillon/la-caverne-des-particuliers.yml
+++ b/data/cities/chatillon/la-caverne-des-particuliers.yml
@@ -7,5 +7,5 @@ city: Châtillon
 street: "Rue Pierre Semard"
 housenumber: 26
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Fr 11:00-19:00; Sa 10:00-19:00; Su,PH 14:30-19:00"
 website: ""
