--- a/data/cities/paris/agnes-b-rue-du-jour-2.yml
+++ b/data/cities/paris/agnes-b-rue-du-jour-2.yml
@@ -7,5 +7,5 @@ city: Paris
 street: "Rue du Jour"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 10:30-19:30; Sa 10:30-20:00; Su 11:00-19:00"
 website: ""
