--- a/data/cities/paris/marie-sixtine.yml
+++ b/data/cities/paris/marie-sixtine.yml
@@ -1,11 +1,11 @@
-id: 3205836112
+id: 6334264916
 type: node
-latitude: 48.86362
-longitude: 2.34438
-postcode: "75001"
+latitude: 48.8713
+longitude: 2.36407
+postcode: "75010"
 city: Paris
-street: "Rue du Jour"
-housenumber: 13
+street: "Rue Beaurepaire"
+housenumber: 27
 phone: ""
-opening_hours: "Mo-Th 11:00-19:00; Fr-Sa 11:00-19:30"
-website: "https://www.marie-sixtine.com/"
+opening_hours: ""
+website: ""
