--- a/data/cities/paris/mr-bricolage-avenue-de-laumiere.yml
+++ b/data/cities/paris/mr-bricolage-avenue-de-laumiere.yml
@@ -6,6 +6,6 @@ postcode: "75019"
 city: Paris
 street: "Avenue de Laumière"
 housenumber: 33
-phone: ""
-opening_hours: ""
+phone: "+33 1 42 06 97 62"
+opening_hours: "Mo-Sa 09:15-19:15"
 website: ""
