--- a/data/cities/versailles/boulangerie-renaissence.yml
+++ b/data/cities/versailles/boulangerie-renaissence.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 6
 phone: "+33 1 39 20 09 89"
-opening_hours: ""
+opening_hours: "Mo-We,Sa 07:00-13:30,15:30-19:30; Su 07:00-13:30,16:00-19:00"
 website: ""
