--- a/data/cities/versailles/coeuret.yml
+++ b/data/cities/versailles/coeuret.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 10
 phone: "+33 1 30 21 55 41"
-opening_hours: "Tu-Sa 07:00-13:00,15:45-19:30"
+opening_hours: "Tu-Fr 08:15-13:00,15:45-19:15; Sa 08:15-13:00,15:45-19:00"
 website: ""
