--- a/data/cities/versailles/koala-pressing.yml
+++ b/data/cities/versailles/koala-pressing.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 14
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 08:00-19:30"
 website: ""
