--- a/data/cities/versailles/la-gitane.yml
+++ b/data/cities/versailles/la-gitane.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 19
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 07:00-20:00; Su 08:00-20:00"
 website: ""
