--- a/data/cities/versailles/lazarova.yml
+++ b/data/cities/versailles/lazarova.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 20
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Th,Sa 09:30-19:00; Fr 09:30-20:30"
 website: ""
