--- a/data/cities/versailles/librairie-de-montreuil.yml
+++ b/data/cities/versailles/librairie-de-montreuil.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 25
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 07:30-13:00,15:00-19:30"
 website: ""
