--- a/data/cities/versailles/saint-algue.yml
+++ b/data/cities/versailles/saint-algue.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: "Rue de Montreuil"
 housenumber: 33
 phone: ""
-opening_hours: ""
+opening_hours: "Tu,We,Fr,Sa 09:30-18:30; Th 09:30-20:00"
 website: ""
