update content and data

--- a/data/cities/antony/charlies-market.yml
+++ b/data/cities/antony/charlies-market.yml
@@ -1,11 +1,11 @@
 id: 11438744057
 type: node
-latitude: 48.7538
-longitude: 2.30372
+latitude: 48.75374
+longitude: 2.30393
 postcode: "92160"
 city: Antony
 street: Rue Auguste Mounié
-housenumber: "14"
+housenumber: ""
 phone: ""
 opening_hours: ""
 website: https://www.charliesmarket.fr/
