--- a/data/cities/cergy/onyxia.yml
+++ b/data/cities/cergy/onyxia.yml
@@ -6,6 +6,6 @@ postcode: "95000"
 city: Cergy
 street: Rue de la Croix des Maheux
 housenumber: ""
-phone: +339 70 72 12 61
-opening_hours: Mo-Fr 10:00-20:00; Sa 09:00-20:00; Su 10:00-20:00
+phone: "0130321287"
+opening_hours: 'Mo-Su 11:00-23:00; '
 website: https://lick.fr/
