--- a/data/cities/pierrelaye/sikkens-solutions.yml
+++ b/data/cities/pierrelaye/sikkens-solutions.yml
@@ -6,6 +6,6 @@ postcode: "95480"
 city: Pierrelaye
 street: Avenue du Général Leclerc
 housenumber: "119"
-phone: ""
+phone: "0130372426"
 opening_hours: ""
 website: ""
