--- a/data/cities/saint-ouen-laumone/foussier-saint-ouen.yml
+++ b/data/cities/saint-ouen-laumone/foussier-saint-ouen.yml
@@ -6,6 +6,6 @@ postcode: "95310"
 city: Saint-Ouen l’Aumône
 street: Rue Paul Painlevé
 housenumber: "10"
-phone: ""
+phone: "0250821821"
 opening_hours: ""
-website: http://www.onlygirls-auto.fr/
+website: https://www.foussier.fr/magasins-foussier-en-france
