--- a/data/cities/trilport/au-bon-levain.yml
+++ b/data/cities/trilport/au-bon-levain.yml
@@ -6,6 +6,6 @@ postcode: "77470"
 city: Trilport
 street: Rue du Maréchal Joffre
 housenumber: "18"
-phone: ""
-opening_hours: ""
+phone: +33 7 66 17 71 60
+opening_hours: Tu-Su 06:30-21:00
 website: ""
