--- a/data/cities/villepreux/coccinelle-express.yml
+++ b/data/cities/villepreux/coccinelle-express.yml
@@ -7,5 +7,5 @@ city: Villepreux
 street: Avenue du Grand Canal
 housenumber: "23"
 phone: +33 6 52 72 15 58
-opening_hours: Mo-Sa 07:00-21:00
+opening_hours: Mo-Sa 07:00-21:00; Su 09:00-13:00
 website: https://www.coccinelle.fr/Trouver_Un_Magasin/Details/coccinelle-express/villepreux/23-avenue-du-grand-canal
