--- a/data/cities/bezons/paris-ouest-automobiles.yml
+++ b/data/cities/bezons/paris-ouest-automobiles.yml
@@ -6,6 +6,6 @@ postcode: "95870"
 city: Bezons
 street: Rue Émile Zola
 housenumber: "30"
-phone: "+33130765651"
-opening_hours: Mo-Sa 06:00-20:00
-website: http://www.moulindepaiou.com/
+phone: "+0130258060"
+opening_hours: ""
+website: ""
