--- a/data/cities/mitry-mory/les-serres-de-mitry.yml
+++ b/data/cities/mitry-mory/les-serres-de-mitry.yml
@@ -8,4 +8,4 @@ street: Rue Pierre Curie
 housenumber: "34"
 phone: "+33986117671"
 opening_hours: Tu-Fr 09:00-12:00,14:00-19:00; Sa 09:30-12:00,14:00-19:00
-website: https:/les-serres-de-mitry.fr/
+website: https://les-serres-de-mitry.fr/
