--- a/data/cities/paris/bitcoin-bazar.yml
+++ b/data/cities/paris/bitcoin-bazar.yml
@@ -8,4 +8,4 @@ street: Rue Eugène Carrière
 housenumber: "27"
 phone: ""
 opening_hours: Mo-Sa 09:30-19:30 / Sun 11:00-17:30
-website: www.bitcoinbazar.fr
+website: https://bitcoinbazar.fr/
