--- a/data/cities/paris/priska-pasquer.yml
+++ b/data/cities/paris/priska-pasquer.yml
@@ -6,6 +6,6 @@ postcode: "75003"
 city: Paris
 street: Rue des Coutures Saint-Gervais
 housenumber: "6"
-phone: ""
+phone: +33 6  26 07 06 61
 opening_hours: Tu-Sa 11:00-19:00
-website: ""
+website: http://www.priskapasquer.art
