--- a/data/cities/torcy/soleil-de-bali.yml
+++ b/data/cities/torcy/soleil-de-bali.yml
@@ -7,5 +7,5 @@ city: Torcy
 street: Rue de Paris
 housenumber: "99"
 phone: ""
-opening_hours: Mo-Sa 10:00-19:00
+opening_hours: Mo,Tu,Th-Sa 10:00-19:00
 website: ""
