--- a/data/cities/versailles/royals-dog-toilette.yml
+++ b/data/cities/versailles/royals-dog-toilette.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: Rue Hoche
 housenumber: "7"
 phone: ""
-opening_hours: Mo,Tu,Th-Sa 09:00-19:00
+opening_hours: Tu-Sa 09:00-19:00
 website: ""
