--- a/data/cities/vincennes/en-cas-de-campagne.yml
+++ b/data/cities/vincennes/en-cas-de-campagne.yml
@@ -7,5 +7,5 @@ city: Vincennes
 street: Avenue de la République
 housenumber: "72"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 07:00-21:00; Su 08:00-20:00
 website: ""
