update content and data

--- a/data/cities/noisy-le-grand/super-u.yml
+++ b/data/cities/noisy-le-grand/super-u.yml
@@ -1,11 +1,11 @@
-id: 2292340752
+id: 8220269171
 type: node
-latitude: 48.84341
-longitude: 2.57822
+latitude: 48.83008
+longitude: 2.56678
 postcode: "93160"
 city: Noisy-le-Grand
-street: Allée du Bataillon Hildevert
-housenumber: "5"
-phone: +33 1 43 05 62 19
-opening_hours: Mo-Sa 08:30-20:30, Su 09:00-13:30
-website: https://www.magasins-u.com/uexpress-noisylegrandchampy
+street: Rue des Halles
+housenumber: "7"
+phone: "+33143030210"
+opening_hours: Mo-Sa 08:30-20:30; Su 09:00-12:55
+website: https://www.magasins-u.com/magasin/superu-noisylegrandgabrielperi
