--- a/data/cities/paris/homnes-shampoings-solides.yml
+++ b/data/cities/paris/homnes-shampoings-solides.yml
@@ -8,4 +8,4 @@ street: Rue Charlemagne
 housenumber: "5"
 phone: +336 68 37 11 48
 opening_hours: Mo-Su 11:00-19:00
-website: http://homnes.co
+website: https://homnes.co/
