--- a/data/cities/paris/naturalia.yml
+++ b/data/cities/paris/naturalia.yml
@@ -1,11 +1,11 @@
-id: 2139158103
+id: 2126361727
 type: node
-latitude: 48.86741
-longitude: 2.34651
-postcode: "75002"
+latitude: 48.87187
+longitude: 2.34332
+postcode: "75009"
 city: Paris
-street: ""
-housenumber: ""
-phone: +33 1 40 26 68 82
-opening_hours: Mo-Sa 09:00-20:45
-website: https://naturalia.fr/
+street: Rue du Faubourg Montmartre
+housenumber: "6"
+phone: +33 1 48 78 50 16
+opening_hours: Su-Fr 09:00-20:45; Sa 09:00-12:45
+website: https://magasins.naturalia.fr/naturalia/fr/store/france/ile-de-france/paris/paris/grands-boulevards/4002
