--- a/data/cities/viroflay/garage-brandao.yml
+++ b/data/cities/viroflay/garage-brandao.yml
@@ -6,6 +6,6 @@ postcode: "78220"
 city: Viroflay
 street: Avenue du Général Leclerc
 housenumber: "119"
-phone: ""
+phone: "+33130243357"
 opening_hours: ""
 website: ""
