--- a/data/cities/courbevoie/olivier-boccassini.yml
+++ b/data/cities/courbevoie/olivier-boccassini.yml
@@ -7,5 +7,5 @@ city: Courbevoie
 street: Avenue de la Liberté
 housenumber: "12"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Sa 10:00-13:00,15:30-20:00
 website: ""
