--- a/data/cities/courbevoie/point-smoke.yml
+++ b/data/cities/courbevoie/point-smoke.yml
@@ -7,5 +7,5 @@ city: Courbevoie
 street: Avenue de la Liberté
 housenumber: "10"
 phone: +33 9 70 97 33 64
-opening_hours: Tu-Sa 10:00-20:00; Mo 14:00-20:00
+opening_hours: Mo-Sa 10:00-20:00
 website: ""
