--- a/data/cities/ozoir-la-ferriere/atvjose.yml
+++ b/data/cities/ozoir-la-ferriere/atvjose.yml
@@ -8,4 +8,4 @@ street: Avenue du Général de Gaulle
 housenumber: "95"
 phone: ""
 opening_hours: Tu-Fr 10:00-12:00, 15:00-19:00; Sa 10:00-12:00, 15:00-18:00
-website: https://ozoir.extra.fr/
+website: https://www.extra.fr/magasin/extra-ozoir-la-ferriere
