--- a/data/cities/saint-leu-la-foret/les-chocolats-yves-thuries.yml
+++ b/data/cities/saint-leu-la-foret/les-chocolats-yves-thuries.yml
@@ -7,5 +7,5 @@ city: Saint-Leu-la-Forêt
 street: Rue du Général Leclerc
 housenumber: "41"
 phone: "0130408393"
-opening_hours: Tu-Fr 10:30-19:00; Sa 09:30-13:30, 14:30-19:00; Su 09:30-12:30
+opening_hours: Tu-Fr 10:30-19:00; Sa 09:30-13:30, 14:30-19:00
 website: https://yvesthuries.com/chocolatier/saint-leu-la-foret-boutique-103
