--- a/data/cities/villebon-sur-yvette/reaute-chocolat.yml
+++ b/data/cities/villebon-sur-yvette/reaute-chocolat.yml
@@ -7,5 +7,5 @@ city: Villebon-sur-Yvette
 street: Avenue de la Plesse
 housenumber: "2"
 phone: +33 1 60 10 25 56
-opening_hours: Mo-Sa 10:00-19:30; Su 10:00-13:00, 14:00-19:00
+opening_hours: Mo-Sa 10:00-19:30; Su 10:00-13:00,14:00-19:00
 website: ""
