update content and data

--- a/data/cities/fontenay-sous-bois/bulles-de-vie.yml
+++ b/data/cities/fontenay-sous-bois/bulles-de-vie.yml
@@ -8,4 +8,4 @@ street: Boulevard de Verdun
 housenumber: 29ter
 phone: ""
 opening_hours: Tu-Sa 09:30-13:00,15:30-19:30
-website: ""
+website: https://www.bulles-de-vie.fr/la-boutique/
