--- a/data/cities/paris/boxxman.yml
+++ b/data/cities/paris/boxxman.yml
@@ -6,6 +6,6 @@ postcode: "75001"
 city: Paris
 street: Rue de la Cossonnerie
 housenumber: "2"
-phone: ""
-opening_hours: ""
-website: https://www.boxxman.fr/
+phone: +33 1 42 21 47 02
+opening_hours: Mo-Fr 10:30-23:00; Sa 10:30-00:00; Su 12:00-22:00
+website: https://www.boxxman.fr
