--- a/data/cities/paris/decathlon-rue-louis-armand.yml
+++ b/data/cities/paris/decathlon-rue-louis-armand.yml
@@ -8,4 +8,4 @@ street: Rue Louis Armand
 housenumber: 4/6
 phone: +331 45 58 60 45
 opening_hours: Mo-Sa 09:30-20:00; Su 10:00-20:00
-website: https://www.decathlon.fr/fr/magasin/magasin-sport-paris-aquaboulevard-MS_0070005800058.html
+website: https://www.decathlon.fr/store-view/magasin-de-sports-paris-aquaboulevard-0070005800058
