--- a/data/cities/paris/latelier-du-sourcil.yml
+++ b/data/cities/paris/latelier-du-sourcil.yml
@@ -1,11 +1,11 @@
-id: 9975208906
+id: 10017020953
 type: node
-latitude: 48.85001
-longitude: 2.37396
-postcode: "75012"
+latitude: 48.86481
+longitude: 2.34855
+postcode: "75002"
 city: Paris
-street: Rue de Charenton
-housenumber: "71"
+street: Rue Dussoubs
+housenumber: "6"
 phone: ""
 opening_hours: ""
 website: ""
