--- a/data/cities/saint-denis/fromagerie-de-saint-denis.yml
+++ b/data/cities/saint-denis/fromagerie-de-saint-denis.yml
@@ -6,6 +6,6 @@ postcode: "93200"
 city: Saint-Denis
 street: Rue Gabriel Péri
 housenumber: "54"
-phone: "+33663219192"
-opening_hours: Tu-Sa 09:00-13:00,16:00-19:00; Su 09:00-13:00
-website: https://placeaufromage.com/
+phone: ""
+opening_hours: Tu-Fr 09:30-13:30, 16:00-19:00; Su 10:00-13:00; Sa 10:00-19:30
+website: ""
