--- a/data/cities/le-vesinet/le-salon.yml
+++ b/data/cities/le-vesinet/le-salon.yml
@@ -1,11 +1,11 @@
-id: 2191525290
+id: 2195544818
 type: node
-latitude: 48.89822
-longitude: 2.11453
+latitude: 48.89389
+longitude: 2.13469
 postcode: "78110"
 city: Le Vésinet
-street: Route de Montesson
-housenumber: "94"
+street: Boulevard Carnot
+housenumber: 55bis
 phone: ""
 opening_hours: ""
 website: ""
