--- a/data/cities/paris/brompton-junction.yml
+++ b/data/cities/paris/brompton-junction.yml
@@ -2,7 +2,7 @@ id: 3980384392
 type: node
 latitude: 48.86049
 longitude: 2.34169
-postcode: ""
+postcode: "75001"
 city: Paris
 street: Rue de Rivoli
 housenumber: "85"
