--- a/data/cities/paris/gegeor.yml
+++ b/data/cities/paris/gegeor.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Rue Moncey
 housenumber: "1"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Fr 09:00-23:30; Sa 10:00-20:30
 website: ""
