--- a/data/cities/saint-cyr-lecole/maison-bouttier.yml
+++ b/data/cities/saint-cyr-lecole/maison-bouttier.yml
@@ -7,5 +7,5 @@ city: Saint-Cyr-l'Ecole
 street: Rue Émile Zola
 housenumber: "3"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Fr 07:00-13:30,15:45-20:00; Su 07:00-13:00
 website: ""
