update content and data

--- a/data/cities/villeneuve-la-garenne/au-centre-de-laudition.yml
+++ b/data/cities/villeneuve-la-garenne/au-centre-de-laudition.yml
@@ -7,5 +7,5 @@ city: Villeneuve-la-Garenne
 street: Voie Promenade
 housenumber: "105"
 phone: "+33141476292"
-opening_hours: Mo-Th 10:00–13:00,14:00–18:00; Fr 10:00–13:00
+opening_hours: Mo-Th 10:00-13:00,14:00-18:00; Fr 10:00-13:00
 website: ""
