--- a/data/cities/villetaneuse/action.yml
+++ b/data/cities/villetaneuse/action.yml
@@ -7,5 +7,5 @@ city: Villetaneuse
 street: Route de Saint-Leu
 housenumber: "4"
 phone: "+33155564152"
-opening_hours: Mo-Sa 08:30–20:00
+opening_hours: Mo-Sa 08:30-20:00
 website: ""
