--- a/data/cities/viroflay/la-pause-gourmande.yml
+++ b/data/cities/viroflay/la-pause-gourmande.yml
@@ -6,6 +6,6 @@ postcode: "78220"
 city: Viroflay
 street: Rue Gabriel Péri
 housenumber: "12"
-phone: ""
+phone: "+33178747437"
 opening_hours: Mo-Fr 07:00-19:30; Sa 07:00-14:00
 website: ""
