--- a/data/cities/arnouville/as-auto-securite-controle-technique.yml
+++ b/data/cities/arnouville/as-auto-securite-controle-technique.yml
@@ -7,5 +7,5 @@ city: Arnouville
 street: Avenue Charles Vaillant
 housenumber: "136"
 phone: "+33139924906"
-opening_hours: Mo-Fr 09:00–18:30, Sa mercredi, 09:00–17:00
+opening_hours: Mo-Fr 09:00-18:30, Sa mercredi, 09:00-17:00
 website: https://agenda2.autosecurite.org/rdv/?origine=affilie_asf&c=C095045&y_source=1_MjAxNDczMDQtNzE1LWxvY2F0aW9uLnJlc2VydmF0aW9uX3VybA%253D%253D
