--- a/data/cities/arnouville/d-a-auto.yml
+++ b/data/cities/arnouville/d-a-auto.yml
@@ -7,5 +7,5 @@ city: Arnouville
 street: Rue Eugène Lemaire
 housenumber: "2"
 phone: "+33980628930"
-opening_hours: Mo-Fr 08:30–12:30, 14:00–18:00; Sa 08:30–12:30
+opening_hours: Mo-Fr 08:30-12:30, 14:00-18:00; Sa 08:30-12:30
 website: ""
