--- a/data/cities/chatenay-malabry/mi-the-mi-cafe.yml
+++ b/data/cities/chatenay-malabry/mi-the-mi-cafe.yml
@@ -7,5 +7,5 @@ city: Chatenay-Malabry
 street: Rue Henri Irène Marrou
 housenumber: "2"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-19:00; Su 09:00-13:30
 website: ""
