--- a/data/cities/colombes/aux-delices-du-portugal.yml
+++ b/data/cities/colombes/aux-delices-du-portugal.yml
@@ -7,5 +7,5 @@ city: Colombes
 street: Rue Gabriel Péri
 housenumber: "18"
 phone: +33 1 41 30 76 21
-opening_hours: Tu-Su 09:00-19:00, Su 09:00-13:30
+opening_hours: Tu-Th 09:00-19:15, Fr-Sa 08:45-19:30, Su 08:45-12:45
 website: ""
