--- a/data/cities/courbevoie/boucherie-aya.yml
+++ b/data/cities/courbevoie/boucherie-aya.yml
@@ -7,5 +7,5 @@ city: Courbevoie
 street: Boulevard Aristide Briand
 housenumber: "34"
 phone: +33 6 59 87 85 34
-opening_hours: Mo 12:30-19:00; Tu-We 09:00–19:30; Th-Sa 08:30–19:30; Su 09:30–16:00
+opening_hours: Mo 12:30-19:00; Tu-We 09:00-19:30; Th-Sa 08:30-19:30; Su 09:30-16:00
 website: ""
