--- a/data/cities/paris/basfroi-cycles.yml
+++ b/data/cities/paris/basfroi-cycles.yml
@@ -5,7 +5,7 @@ longitude: 2.37833
 postcode: "75011"
 city: Paris
 street: Rue Basfroi
-housenumber: "48"
-phone: "+33184070507"
+housenumber: "50"
+phone: +33 1 71 50 77 52
 opening_hours: ""
-website: https://wheelove-bike.com
+website: https://basfroicycles.com
