--- a/data/cities/paris/boulangerie-notre-dame.yml
+++ b/data/cities/paris/boulangerie-notre-dame.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Rue d'Arcole
 housenumber: "1"
 phone: ""
-opening_hours: Mo-Sa 06:30-20:00
-website: http://www.hure-createur.fr
+opening_hours: Mo-Fr 06:30-20:00; Sa 07:00-20:00
+website: ""
