--- a/data/cities/paris/intemporel.yml
+++ b/data/cities/paris/intemporel.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Avenue Ledru-Rollin
 housenumber: "78"
 phone: ""
-opening_hours: ""
+opening_hours: Tu,We,Fr 10:00-19:00; Th 10:00-20:00; Sa 09:00-19:00
 website: ""
