--- a/data/cities/paris/je-suis-a-velo.yml
+++ b/data/cities/paris/je-suis-a-velo.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Rue de Rivoli
 housenumber: "26"
 phone: ""
-opening_hours: ""
-website: https://jesuisavelo.com/
+opening_hours: Mo-Sa 11:00-19:30; Su 11:00-19:00
+website: https://jesuisavelo.com
