--- a/data/cities/paris/sofic.yml
+++ b/data/cities/paris/sofic.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Avenue Ledru-Rollin
 housenumber: "86"
 phone: +33 1 43 43 79 73
-opening_hours: Mo-Fr 08:15-12:00, 13:30-17:30
+opening_hours: Mo-Fr 09:00-13:00,14:00-17:30
 website: https://sofic-cuir.com
