--- a/data/cities/versailles/carrosserie-cda.yml
+++ b/data/cities/versailles/carrosserie-cda.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: Rue des Chantiers
 housenumber: "79"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Fr 08:00-12:00,13:30-18:00
 website: ""
