--- a/data/cities/versailles/coifelle-lui.yml
+++ b/data/cities/versailles/coifelle-lui.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: Rue des Chantiers
 housenumber: "79"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Sa 09:30-18:30
 website: ""
