--- a/data/cities/versailles/revert.yml
+++ b/data/cities/versailles/revert.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: Rue Rameau
 housenumber: "3"
 phone: +33 1 39072920
-opening_hours: Tu-Sa 14:15-19:00,09:00-12:45
+opening_hours: Mo 09:30-13:00,14:00-19:00; Tu-Sa 09:30-19:00
 website: https://www.revert-bricolage-outillage-78.fr/
