--- a/data/cities/versailles/smithetson.yml
+++ b/data/cities/versailles/smithetson.yml
@@ -6,6 +6,6 @@ postcode: "78000"
 city: Versailles
 street: Rue de la Paroisse
 housenumber: 7bis
-phone: ""
+phone: +33 1 73 95 03 57
 opening_hours: Tu-Sa 10:00-13:30,14:30-19:00
-website: ""
+website: https://www.smithandson.com/
