--- a/data/cities/versailles/symphonie-florale.yml
+++ b/data/cities/versailles/symphonie-florale.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: Rue des Chantiers
 housenumber: "42"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Fr 09:00-13:00,15:00-18:00; Sa 09:30-13:00,15:00-18:00; Su 09:30-13:00
 website: ""
