--- a/data/cities/versailles/tabac-presse.yml
+++ b/data/cities/versailles/tabac-presse.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: Rue des Chantiers
 housenumber: "42"
 phone: ""
-opening_hours: ""
+opening_hours: Sa 07:00-20:00; Su 07:30-18:00; Mo-Fr 06:30-20:00
 website: ""
