update content and data

--- a/data/cities/paris/sex-shop-boulevard-de-clichy-4.yml
+++ b/data/cities/paris/sex-shop-boulevard-de-clichy-4.yml
@@ -1,11 +1,11 @@
-id: 5929858533
+id: 5932494585
 type: node
-latitude: 48.88271
-longitude: 2.33546
-postcode: "75009"
+latitude: 48.88325
+longitude: 2.33519
+postcode: "75018"
 city: Paris
 street: Boulevard de Clichy
-housenumber: 33 bis
+housenumber: "52"
 phone: ""
 opening_hours: ""
 website: ""
