--- a/data/cities/saint-mande/black-sun.yml
+++ b/data/cities/saint-mande/black-sun.yml
@@ -1,11 +1,11 @@
 id: 4123679089
 type: node
-latitude: 48.84691
-longitude: 2.41779
+latitude: 48.84695
+longitude: 2.41777
 postcode: "94160"
 city: Saint-Mandé
 street: Avenue Joffre
 housenumber: "2"
 phone: ""
-opening_hours: Mo-Fr 10:00-19:00
-website: www.cookeva.fr
+opening_hours: ""
+website: ""
