--- a/data/cities/noisy-le-grand/mamselles-flowers.yml
+++ b/data/cities/noisy-le-grand/mamselles-flowers.yml
@@ -8,4 +8,4 @@ street: Rue Pierre Brossolette
 housenumber: "176"
 phone: ""
 opening_hours: ""
-website: https://www.petit-monde.fr/
+website: https://mamsellesflowers.com/
