--- a/data/cities/paris/paris-store.yml
+++ b/data/cities/paris/paris-store.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Boulevard de la Villette
 housenumber: "3"
 phone: +33 1 42 08 62 54
-opening_hours: Mo-Sa 09:00-19:30
+opening_hours: Mo-Sa 09:00-19:40; Su 08:45-13:00
 website: https://www.paris-store.com
