--- a/data/cities/paris/sex-shop.yml
+++ b/data/cities/paris/sex-shop.yml
@@ -1,11 +1,11 @@
-id: 5932396757
+id: 5929858533
 type: node
-latitude: 48.88324
-longitude: 2.33364
+latitude: 48.88271
+longitude: 2.33546
 postcode: "75009"
 city: Paris
 street: Boulevard de Clichy
-housenumber: "51"
+housenumber: 33 bis
 phone: ""
 opening_hours: ""
 website: ""
