update content and data

--- a/data/cities/paris/cahier-central.yml
+++ b/data/cities/paris/cahier-central.yml
@@ -8,4 +8,4 @@ street: Rue du Château d'Eau
 housenumber: "26"
 phone: ""
 opening_hours: Tu-Su 12:00-19:00
-website: http://cahiercentral.com/
+website: https://cahiercentral.com/
