--- a/data/cities/saint-ouen-sur-seine/boniments-bleus.yml
+++ b/data/cities/saint-ouen-sur-seine/boniments-bleus.yml
@@ -7,5 +7,5 @@ city: Saint-Ouen-sur-Seine
 street: Rue Jules Vallès
 housenumber: "8"
 phone: ""
-opening_hours: Fr-Sa 11:00-18:00
+opening_hours: '"sur rendez-vous"'
 website: https://www.bonimentsbleus.com/
