--- a/data/cities/paris/cordonnerie-basfroi.yml
+++ b/data/cities/paris/cordonnerie-basfroi.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Rue Basfroi
 housenumber: "29"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 08:00-13:00,14:00-20:00
 website: ""
