--- a/data/cities/paris/la-fromagerie-goncourt.yml
+++ b/data/cities/paris/la-fromagerie-goncourt.yml
@@ -6,6 +6,6 @@ postcode: "75011"
 city: Paris
 street: Rue Abel Rabaud
 housenumber: "1"
-phone: +33 1 43 57 91 28
+phone: ""
 opening_hours: Mo-Fr 09:00-13:30, 15:30-20:00; Sa 09:00-20:00
 website: ""
