--- a/data/cities/paris/playin-paris-bnf.yml
+++ b/data/cities/paris/playin-paris-bnf.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Avenue de France
 housenumber: "131"
 phone: +33 9 71 24 98 87
-opening_hours: Mo-Fr 12:00-20:00 Sa 11:00-20:00
+opening_hours: Mo-Fr 12:00-20:00; Sa 11:00-20:00
 website: https://www.play-in.com/store/1-playin_paris
