--- a/data/cities/saint-leu-la-foret/les-chocolats-yves-thuries.yml
+++ b/data/cities/saint-leu-la-foret/les-chocolats-yves-thuries.yml
@@ -7,6 +7,5 @@ city: Saint-Leu-la-Forêt
 street: Rue du Général Leclerc
 housenumber: "41"
 phone: "0130408393"
-opening_hours: Mo 10:30-14:00, 14:45-19:00; Tu-Fr 10:30-19:00; Sa 09:30-19:00; Su
-    10:00-18:00
+opening_hours: Mo-Fr 10:30-19:00; Sa 09:30-19:00; Su 10:00-13:30, 14:00-18:00
 website: https://yvesthuries.com/chocolatier/saint-leu-la-foret-boutique-103
