update content and data

--- a/data/cities/fontenay-le-fleury/librairie-jms.yml
+++ b/data/cities/fontenay-le-fleury/librairie-jms.yml
@@ -6,6 +6,6 @@ postcode: "78333"
 city: Fontenay-le-fleury
 street: Avenue Henri Poincaré
 housenumber: "1"
-phone: ""
-opening_hours: Tu-Sa 09:30-19:30,12:30-15:30
+phone: +33 1 30 58 05 45
+opening_hours: Tu-Sa 09:30-12:30,15:30-19:30
 website: ""
