--- a/data/cities/verrieres-le-buisson/charcuterie-de-paron.yml
+++ b/data/cities/verrieres-le-buisson/charcuterie-de-paron.yml
@@ -5,7 +5,7 @@ longitude: 2.26581
 postcode: "91370"
 city: Verrières-le-Buisson
 street: Rue de Paron
-housenumber: "3"
+housenumber: ""
 phone: "+33169202221"
 opening_hours: Tu-Th 08:30-13:00; Fr-Sa 08:30-13:00, 15:30-20:00
 website: ""
