--- a/data/cities/verrieres-le-buisson/mods-hair.yml
+++ b/data/cities/verrieres-le-buisson/mods-hair.yml
@@ -5,7 +5,7 @@ longitude: 2.26621
 postcode: "91370"
 city: Verrières-le-Buisson
 street: Rue de Paron
-housenumber: "11"
+housenumber: ""
 phone: "+33160110500"
 opening_hours: Tu-Th 09:30-19:30; Fr 09:00-19:30; Sa 09:00-18:30
 website: https://www.modshair.com/
