--- a/data/cities/verrieres-le-buisson/optique-verrieres.yml
+++ b/data/cities/verrieres-le-buisson/optique-verrieres.yml
@@ -5,7 +5,7 @@ longitude: 2.26577
 postcode: "91370"
 city: Verrières-le-Buisson
 street: Rue de Paron
-housenumber: "1"
+housenumber: ""
 phone: "+33169300799"
 opening_hours: Tu 09:00-12:30, 15:00-19:30; We 09:00-13:00, 15:00-19:00; Th-Fr 09:00-12:30,
     15:00-19:30; Sa 09:00-12:30, 14:30-19:30
