--- a/data/cities/vincennes/feuilles-dautomne.yml
+++ b/data/cities/vincennes/feuilles-dautomne.yml
@@ -7,5 +7,5 @@ city: Vincennes
 street: Avenue de la République
 housenumber: "2"
 phone: ""
-opening_hours: Th-Tu 07:00-13:30,16:00-20:00
+opening_hours: Mo-Su 07:00-13:30,16:00-20:00; We off
 website: ""
