--- a/data/cities/paris-18eme-arrondissement/julien-dorcel.yml
+++ b/data/cities/paris-18eme-arrondissement/julien-dorcel.yml
@@ -7,5 +7,5 @@ city: Paris 18eme Arrondissement
 street: Rue du Poteau
 housenumber: "36"
 phone: ""
-opening_hours: Tu-Sa 10:30-19:30
+opening_hours: Tu-Fr 10:30-19:30; Sa 10:30-19:00
 website: https://www.juliendorcel.com/bijouterie/paris-18eme-arrondissement-1651M
