--- a/data/cities/paris/crush-cake.yml
+++ b/data/cities/paris/crush-cake.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Rue Basfroi
 housenumber: "52"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Sa 09:00-19:00
 website: https://crush-cake.com/
