--- a/data/cities/verrieres-le-buisson/47-street.yml
+++ b/data/cities/verrieres-le-buisson/47-street.yml
@@ -5,7 +5,7 @@ longitude: 2.26574
 postcode: "91370"
 city: Verrières-le-Buisson
 street: Rue d'Estienne d'Orves
-housenumber: "47"
+housenumber: ""
 phone: +33 6 64 75 86 92
 opening_hours: ""
 website: https://www.pagesmode.com/boutique/47-street-verrieres-le-buisson
