--- a/data/cities/verrieres-le-buisson/superette-de-la-mairie.yml
+++ b/data/cities/verrieres-le-buisson/superette-de-la-mairie.yml
@@ -5,7 +5,7 @@ longitude: 2.26585
 postcode: "91370"
 city: Verrières-le-Buisson
 street: Rue de Paron
-housenumber: "2"
+housenumber: ""
 phone: "+33169300651"
 opening_hours: Tu-Su 09:00-21:00
 website: ""
