update content and data

--- a/data/cities/paris/les-fournils-de-france.yml
+++ b/data/cities/paris/les-fournils-de-france.yml
@@ -1,11 +1,11 @@
-id: 7414322774
+id: 2984947376
 type: node
-latitude: 48.88373
-longitude: 2.34383
-postcode: "75018"
+latitude: 48.84775
+longitude: 2.39738
+postcode: "75012"
 city: Paris
-street: Rue d'Orsel
-housenumber: "33"
+street: Place de la Nation
+housenumber: "30"
 phone: ""
-opening_hours: Mo-Su 07:00-20:00
+opening_hours: ""
 website: ""
