--- a/data/cities/velizy-villacoublay/lusine-mode-et-maison.yml
+++ b/data/cities/velizy-villacoublay/lusine-mode-et-maison.yml
@@ -7,5 +7,5 @@ city: Vélizy-Villacoublay
 street: ""
 housenumber: ""
 phone: ""
-opening_hours: Tu-Fr 11:00-20:00; Sa-Su 10:00-20:00
+opening_hours: Mo-Fr 11:00-20:00; Sa-Su 10:00-20:00
 website: https://www.lusinemodeetmaison.fr/
