--- a/data/cities/versailles/yves-thuries.yml
+++ b/data/cities/versailles/yves-thuries.yml
@@ -7,5 +7,6 @@ city: Versailles
 street: Rue de la Paroisse
 housenumber: "37"
 phone: ""
-opening_hours: Mo 10:00-13:30, 14:30-19:00; Tu-Sa 10:00-19:00; Su 10:00-13:30, 14:30-18:00
+opening_hours: Mo 10:00-19:00; Tu 10:00-18:00; Th-Sa 10:00-19:00; Su 10:00-13:00,
+    14:00-18:00
 website: https://yvesthuries.com/chocolatier/versailles-B81/
