update content and data

--- a/data/cities/le-pre-saint-gervais/farine.yml
+++ b/data/cities/le-pre-saint-gervais/farine.yml
@@ -7,5 +7,5 @@ city: Le Pré-Saint-Gervais
 street: Rue de Stalingrad
 housenumber: "37"
 phone: ""
-opening_hours: Tu-Sa 08:00-19:30
+opening_hours: Tu-Fr 08:00-19:30; Sa 08:00-19:00
 website: https://farine-lepresaintgervais.com/
