--- a/data/cities/le-perreux-sur-marne/le-marche-franprix.yml
+++ b/data/cities/le-perreux-sur-marne/le-marche-franprix.yml
@@ -1,11 +1,11 @@
-id: 670929891
+id: 656739290
 type: node
-latitude: 48.83532
-longitude: 2.49922
+latitude: 48.84317
+longitude: 2.50419
 postcode: "94170"
 city: Le Perreux-sur-Marne
-street: Avenue Pierre Brossolette
-housenumber: "57"
+street: Rue de la Station
+housenumber: "7"
 phone: ""
-opening_hours: Tu-Sa 09:00-20:00; Su 09:00-13:00
-website: https://www.franprix.fr/magasins/5308
+opening_hours: Mo-Su 08:30-21:00
+website: ""
