--- a/data/cities/marly-le-roi/hairs-marly.yml
+++ b/data/cities/marly-le-roi/hairs-marly.yml
@@ -7,5 +7,5 @@ city: Marly-le-Roi
 street: Grande Rue
 housenumber: "7"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Sa 09:00-19:00
 website: ""
