--- a/data/cities/paris/violette-and-co.yml
+++ b/data/cities/paris/violette-and-co.yml
@@ -6,6 +6,6 @@ postcode: "75011"
 city: Paris
 street: Rue Jean-Pierre Timbaud
 housenumber: "52"
-phone: ""
+phone: +33 1 88 61 23 82
 opening_hours: tu-Sa 10:30-19:30
-website: https://www.violetteandco.com/
+website: https://www.violetteandco.com
