--- a/data/cities/savigny-le-temple/kiloutou.yml
+++ b/data/cities/savigny-le-temple/kiloutou.yml
@@ -7,5 +7,5 @@ city: Savigny-le-Temple
 street: Allée du Cobalt
 housenumber: "20"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Fr 07:00-12:00,13:30-18:30; Sa 08:00-12:00,14:00-18:00
 website: ""
