--- a/data/cities/suresnes/body-minute.yml
+++ b/data/cities/suresnes/body-minute.yml
@@ -7,5 +7,5 @@ city: Suresnes
 street: Rue des Bourets
 housenumber: "4"
 phone: +33 1 47 94 88 12
-opening_hours: Mo-Sa 10:00-20:00
+opening_hours: Tu-Sa 10:00-20:00
 website: https://www.bodyminute.com
