update content and data

--- a/data/cities/asnieres-sur-seine/intermarche.yml
+++ b/data/cities/asnieres-sur-seine/intermarche.yml
@@ -4,7 +4,7 @@ latitude: 48.91602
 longitude: 2.27785
 postcode: "92600"
 city: Asnières-sur-Seine
-street: Rue de Colombes
+street: ""
 housenumber: "116"
 phone: ""
 opening_hours: Mo-Sa 08:45-20:30; Su 09:00-13:00
