--- a/data/cities/boulogne-billancourt/lina-nails.yml
+++ b/data/cities/boulogne-billancourt/lina-nails.yml
@@ -6,6 +6,6 @@ postcode: "92100"
 city: Boulogne-Billancourt
 street: Avenue Pierre Grenier
 housenumber: "66"
-phone: ""
+phone: +33 9 87 58 35 13
 opening_hours: ""
 website: ""
