--- a/data/cities/asnieres-sur-seine/my-auchan.yml
+++ b/data/cities/asnieres-sur-seine/my-auchan.yml
@@ -7,5 +7,5 @@ city: Asnières-sur-Seine
 street: Avenue d'Argenteuil
 housenumber: 41/43
 phone: ""
-opening_hours: Mo-Sa 09:30-20:00; Su 09:00-12:45
-website: https://lesnouveauxrobinson.coop/magasins/asnieres-sur-seine-3/
+opening_hours: Mo-Sa 08:00-21:00   Su 09:00-21:00
+website: ""
