--- a/data/cities/paris/vg-patisserie.yml
+++ b/data/cities/paris/vg-patisserie.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Boulevard Voltaire
 housenumber: "123"
 phone: "+33148871342"
-opening_hours: Tu-Fr 08:00-12:00, 13:00-19:00; Sa-Su 08:00-17:00
+opening_hours: We-Sa 09:00-12:00, 13:00-19:00; Su 09:00-18:00; Tu 13:00-19:00
 website: ""
