update content and data

--- a/data/cities/champs-sur-marne/aube-patisserie-boulangerie.yml
+++ b/data/cities/champs-sur-marne/aube-patisserie-boulangerie.yml
@@ -7,5 +7,5 @@ city: Champs-sur-Marne
 street: Place de l'Ancien Marché
 housenumber: ""
 phone: ""
-opening_hours: Mo,Th-Su 06:30-20:00
+opening_hours: Th-Tu 07:00-14:30, Mo,Tu,Th,Fr 15:00-19:30, Sa,Su 15:00-19:00
 website: ""
