--- a/data/cities/paris/franprix-3.yml
+++ b/data/cities/paris/franprix-3.yml
@@ -1,11 +1,11 @@
-id: 1374463833
+id: 988247077
 type: node
-latitude: 48.88472
-longitude: 2.38711
+latitude: 48.85029
+longitude: 2.27052
 postcode: ""
 city: Paris
 street: ""
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 08:00-21:00; Su 09:00-13:00
-website: https://www.franprix.fr/magasins/5565
+opening_hours: Mo-Sa 08:30-21:00; Su 09:00+
+website: https://www.franprix.fr/magasins/6399
