--- a/data/cities/paris/franprix-2.yml
+++ b/data/cities/paris/franprix-2.yml
@@ -1,11 +1,11 @@
-id: 988247077
+id: 549993118
 type: node
-latitude: 48.85029
-longitude: 2.27052
+latitude: 48.82014
+longitude: 2.34365
 postcode: ""
 city: Paris
 street: ""
 housenumber: ""
-phone: ""
-opening_hours: Mo-Sa 08:30-21:00; Su 09:00+
-website: https://www.franprix.fr/magasins/6399
+phone: +33 9 70 17 14 14
+opening_hours: Mo-Sa 07:30-21:00; Su 09:00-13:00
+website: https://www.franprix.fr/magasins/4177
