--- a/data/cities/paris/franprix-5.yml
+++ b/data/cities/paris/franprix-5.yml
@@ -1,11 +1,11 @@
-id: 1673104017
+id: 1504098177
 type: node
-latitude: 48.84219
-longitude: 2.3496
-postcode: "75005"
+latitude: 48.87102
+longitude: 2.32078
+postcode: ""
 city: Paris
 street: ""
-housenumber: "82"
+housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 07:00-22:00, Su 09:00-22:00
-website: https://www.franprix.fr/magasins/1116
+opening_hours: Mo-Su 08:30-20:30
+website: https://www.franprix.fr/magasins/5697
