--- a/data/cities/versailles/aldi.yml
+++ b/data/cities/versailles/aldi.yml
@@ -7,5 +7,5 @@ city: Versailles
 street: Rue des Chantiers
 housenumber: "60"
 phone: ""
-opening_hours: Mo-Sa 08:30-20:00; Su 08:30-12:30
-website: ""
+opening_hours: Mo-Sa 08:30-20:30; Su 08:30-12:30
+website: https://www.aldi.fr/magasins-et-horaires-d-ouverture.html/l/versailles/58-62-rue-des-chantiers/3435080
