update content and data

--- a/data/cities/marcoussis/esso.yml
+++ b/data/cities/marcoussis/esso.yml
@@ -8,4 +8,4 @@ street: ""
 housenumber: ""
 phone: ""
 opening_hours: 24/7
-website: http://stationsbp.fr/bp_station/site_bp_station/index.php?page
+website: ""
