--- a/data/cities/moret-loing-et-orvanne/velo-bello.yml
+++ b/data/cities/moret-loing-et-orvanne/velo-bello.yml
@@ -8,4 +8,4 @@ street: Allée Gustave Prugnat
 housenumber: "18"
 phone: +33 6 02 17 91 48
 opening_hours: ""
-website: https://www.facebook.com/velobello.france
+website: https://velobellofrance.wordpress.com/
