--- a/data/cities/paris/les-delices-de-la-villette.yml
+++ b/data/cities/paris/les-delices-de-la-villette.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Boulevard de la Villette
 housenumber: "224"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Su 00:00-00:00
 website: ""
