--- a/data/cities/paris/monoprix.yml
+++ b/data/cities/paris/monoprix.yml
@@ -1,11 +1,11 @@
-id: 260016094
+id: 283347984
 type: node
-latitude: 48.84358
-longitude: 2.30526
-postcode: "75015"
+latitude: 48.8656
+longitude: 2.35194
+postcode: "75002"
 city: Paris
-street: Rue Lecourbe
-housenumber: "76"
-phone: +33 1 42 73 03 30
-opening_hours: 09:00-21:45; Su 09:00-20:00
-website: https://www.monoprix.fr/48.html
+street: Boulevard de Sébastopol
+housenumber: "95"
+phone: +33 1 42 33 36 15
+opening_hours: Mo-Sa 08:00-21:45; Su 09:00-19:45
+website: ""
