update content and data

--- a/data/cities/joinville-le-pont/la-navette.yml
+++ b/data/cities/joinville-le-pont/la-navette.yml
@@ -7,5 +7,5 @@ city: Joinville-le-Pont
 street: Rue de Paris
 housenumber: ""
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: Tu-Fr 06:30-20:00; Sa-Su 07:00-20:00
+website: https://www.boulangerie-lanavette.fr/
