--- a/data/cities/le-chesnay/ikks-women-men.yml
+++ b/data/cities/le-chesnay/ikks-women-men.yml
@@ -8,4 +8,4 @@ street: Centre Commercial Parly 2
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 10:00-21:00
-website: https://www.ikks.com
+website: https://stores.ikks.com/fr_fr/boutique/le-chesnay/ikks-women-men-le-chesnay/536c8f21e0bbafaa06e12a891a340150
