--- a/data/cities/meudon/the-secret-of-beauty.yml
+++ b/data/cities/meudon/the-secret-of-beauty.yml
@@ -7,5 +7,5 @@ city: Meudon
 street: Place Simone Veil
 housenumber: "9"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Th 10:00-20:00; Fr 10:30-21:00; Sa 09:30-19:30
 website: ""
