--- a/data/cities/paris/ikks-rue-saint-sulpice.yml
+++ b/data/cities/paris/ikks-rue-saint-sulpice.yml
@@ -8,4 +8,4 @@ street: Rue Saint-Sulpice
 housenumber: "38"
 phone: ""
 opening_hours: Mo-Sa 10:00-19:00
-website: https://www.ikks.com
+website: https://stores.ikks.com/fr-fr/boutique/paris/ikks-women-men-paris-st-sulpice/5d518e805894384e726705ba0423d269
