--- a/data/cities/rambouillet/ikks.yml
+++ b/data/cities/rambouillet/ikks.yml
@@ -8,4 +8,4 @@ street: Rue du Général de Gaulle
 housenumber: "63"
 phone: ""
 opening_hours: Mo 14:00-19:00; Tu-Sa 10:00-19:00
-website: https://www.ikks.com/
+website: https://stores.ikks.com/fr_fr/boutique/rambouillet/ikks-women-men-rambouillet/536c8f21e0bbafaa06e12a891a3dd1a1
