--- a/data/cities/rueil-malmaison/ikks-rue-hervet.yml
+++ b/data/cities/rueil-malmaison/ikks-rue-hervet.yml
@@ -8,4 +8,4 @@ street: Rue Hervet
 housenumber: "10"
 phone: ""
 opening_hours: Mo 12:30-19:00; Tu-Sa 10:30-19:00
-website: https://www.ikks.com/
+website: https://stores.ikks.com/fr-fr/boutique/rueil-malmaison/ikks-women-rueil-malmaison/536c8f21e0bbafaa06e12a891a4d41e5
