--- a/data/cities/cormeilles-en-parisis/paradis-des-fleurs.yml
+++ b/data/cities/cormeilles-en-parisis/paradis-des-fleurs.yml
@@ -1,11 +1,11 @@
-id: 9903497583
+id: 390630021
 type: node
-latitude: 48.97179
-longitude: 2.20341
+latitude: 48.97185
+longitude: 2.2034
 postcode: "95240"
 city: Cormeilles-en-Parisis
 street: Rue de la République
-housenumber: ""
-phone: ""
+housenumber: "27"
+phone: +33 1 39 78 18 28
 opening_hours: ""
 website: ""
