--- a/data/cities/joinville-le-pont/audiosphere.yml
+++ b/data/cities/joinville-le-pont/audiosphere.yml
@@ -7,5 +7,5 @@ city: Joinville-le-Pont
 street: Rue de Paris
 housenumber: 12 bis
 phone: +33 1 41 95 22 11
-opening_hours: ""
+opening_hours: Mo-Fr 10:00-12:30,14:00-19:00
 website: ""
