--- a/data/cities/joinville-le-pont/de-neuville.yml
+++ b/data/cities/joinville-le-pont/de-neuville.yml
@@ -7,5 +7,5 @@ city: Joinville-le-Pont
 street: Rue de Paris
 housenumber: 10 bis
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Sa 10:00-19:00; Su 10:00-12:30
 website: ""
