--- a/data/cities/joinville-le-pont/franck-provost.yml
+++ b/data/cities/joinville-le-pont/franck-provost.yml
@@ -7,5 +7,5 @@ city: Joinville-le-Pont
 street: Rue de Paris
 housenumber: "16"
 phone: ""
-opening_hours: ""
+opening_hours: Tu-Sa 10:00-19:00
 website: https://salons.franckprovost.com/fr/coiffeur/france-33/val--marne-94/joinville-le-pont-94042/franck-provost-4932
