--- a/data/cities/joinville-le-pont/lantre-de-pages.yml
+++ b/data/cities/joinville-le-pont/lantre-de-pages.yml
@@ -6,6 +6,6 @@ postcode: "94340"
 city: Joinville-le-Pont
 street: Rue de Paris
 housenumber: "27"
-phone: ""
-opening_hours: ""
+phone: +33 1 42 83 77 05
+opening_hours: Tu-Sa 08:00-19:30; Su 09:00-13:00
 website: ""
