--- a/data/cities/joinville-le-pont/optical-factory.yml
+++ b/data/cities/joinville-le-pont/optical-factory.yml
@@ -7,5 +7,5 @@ city: Joinville-le-Pont
 street: Rue de Paris
 housenumber: "14"
 phone: +33 1 55 97 28 66
-opening_hours: ""
+opening_hours: Mo-Sa 10:00-19:00
 website: https://www.opticalfactory-store.com/
