--- a/data/cities/paris/boulangerie-marceaux.yml
+++ b/data/cities/paris/boulangerie-marceaux.yml
@@ -7,5 +7,5 @@ city: Paris
 street: Boulevard de Reuilly
 housenumber: "5"
 phone: ""
-opening_hours: Tu-Sa 06:00-20:30,Su 07:00-20:00
-website: ""
+opening_hours: 06:30-20:00
+website: https://maisonlandemaine.com/boulangeries/
